подключение маппера и дто

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,1 @@
-1. Написать тесты
-2. Миграции ???
-3. Docker file и compose описать
-4. Валидация
-5. Ислючения и обработка полноценная
-6. Проверить на ошибки и реализация просмотреть. Transactional??
-7. Запустить и проверить
+1. Mapper и DTO забыл подключить
